# Quant-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  daliy.sh  pyproject.toml
docs/: architecture.md  roadmap.md  universe-strategy.md
src/quant_agent/alerts/: base.py  console.py  discord.py  factory.py  rules.py
src/quant_agent/analysis/: indicators.py  signals.py
src/quant_agent/broker/: base.py
src/quant_agent/collectors/: base.py  price.py
src/quant_agent/config/: logging_setup.py  settings.py
src/quant_agent/reports/: daily.py
src/quant_agent/scheduler/: cli.py  jobs.py
src/quant_agent/secrets/: aws_provider.py  base.py  bootstrap.py  env_provider.py
src/quant_agent/service/: analysis.py  collection.py  results.py
src/quant_agent/storage/: base.py  duckdb_store.py
src/quant_agent/universe/: models.py  tiers.py
tests/: conftest.py
tests/unit/: test_analysis_service.py  test_broker.py  test_channels.py  test_cli.py  test_collection_service.py  test_duckdb_store.py  test_indicators.py  test_jobs.py  test_price_collector.py  test_reports.py  test_rules.py  test_secrets.py  test_settings.py  test_signals.py  test_universe.py
