[project]
name = "quant-agent"
version = "0.1.0"
description = "단계적 자율 주식 매매 에이전트 시스템 - 데이터 수집/분석/알림 파이프라인부터 시작"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "finance-datareader>=0.9.96",
    "pandas>=2.2.0",
    "duckdb>=1.1.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]
aws = [
    "boto3>=1.35.0",
]

[project.scripts]
quant-agent = "quant_agent.scheduler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=quant_agent --cov-report=term-missing"
markers = [
    "integration: 외부 네트워크/IO를 사용하는 통합 테스트 (실행: pytest -m integration)",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]  # line-length는 formatter가 처리

[tool.coverage.run]
branch = true
omit = ["*/tests/*"]
